# AutoKahoot

./: .gitignore  README.md  kahoot_bot.py  main.py  pyproject.toml  requirements.txt  run.py
autokahoot/: __init__.py  answer_delay.py  bot.py  event.py  events.py  kahoot.py  lobby.py  question.py  question_choice.py  quiz.py
autokahoot/rounds/: __init__.py  drop_pin.py  multiple_choice_quiz.py  not_implemented.py  poll.py  quiz.py  round.py  rounds.py  slide.py  type_answer.py
